# software-and-data-security-assignments

./: .gitignore  Cargo.toml  README.md
casino-royale/: Cargo.toml
casino-royale/src/: main.rs
human-like-passwords/: .gitignore  Cargo.toml  README.md  top-passwords.txt
human-like-passwords/src/: main.rs
intro/: .gitignore  Cargo.toml
intro/src/: main.rs
intro/src/tasks/: mod.rs
intro/src/tasks/task2/: mod.rs
intro/src/tasks/task3/: mod.rs
intro/src/tasks/task4/: mod.rs
intro/src/tasks/task5/: mod.rs
intro/src/tasks/task6/: mod.rs
intro/src/utils/: dictionaries.rs  mod.rs
intro/tasks/task1/: input
intro/tasks/task2/: input
intro/tasks/task5/: input
intro/tasks/task6/: input
passowrd-storage/: go.mod  main.go
password-storage/: go.mod  main.go
password-storage/handlers/: home.go  signin.go  signup.go
password-storage/server/: init.go
secure-web-app/: Cargo.toml
secure-web-app-storage/: Dockerfile  app.js  package-lock.json  package.json
secure-web-app/src/: main.rs
src/: main.rs  substitution.rs  vigenere.rs  wonderland.rs
src/tasks/: mod.rs
src/tasks/task1/: mod.rs
src/tasks/task2/: mod.rs
src/tasks/task3/: mod.rs
src/tasks/task4/: mod.rs
src/utils/: dictionaries.rs  mod.rs  substitution.rs  vigenere.rs  wonderland.txt
tasks/task3/: input
tasks/task4/: input
utils/: Cargo.toml
utils/src/: dictionaries.rs  lib.rs  words.rs
weak-salt/: Cargo.toml  README.md  input
weak-salt/src/: main.rs
