[package]
name = "casino-royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"