[package]
name = "intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
rayon = "1.5.1"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.14"
hex = "0.4.3"
indicatif = "0.17.0-beta.1"
bincode = "1.3.3"
utils = { path = "../utils" }