[package]
name = "secure-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.131"
postgres = "0.19.2"
rust-argon2 = "0.8.3"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"
jwt-simple = "0.10.8"
base64 = "0.13.0"